[gd_scene load_steps=10 format=4 uid="uid://db0euvwgqcy1n"]

[ext_resource type="PackedScene" uid="uid://dg6xeoeca1w6y" path="res://World/LevelTransition/level_transition.tscn" id="2_xkkfx"]
[ext_resource type="PackedScene" uid="uid://bh2ug7a8cgm22" path="res://World/TileMaps/grass_map.tscn" id="3_lvo1y"]
[ext_resource type="PackedScene" uid="uid://baprq14svtfj4" path="res://Entities/Player/player.tscn" id="3_m3c38"]
[ext_resource type="PackedScene" uid="uid://btm8i7kyj8h2" path="res://World/TileMaps/tile_map.tscn" id="4_tfkc5"]
[ext_resource type="PackedScene" uid="uid://bbpfliouyy706" path="res://Entities/spawn_setter/spawn_setter.tscn" id="5_y6vkb"]
[ext_resource type="Script" uid="uid://b4gaguac3tgyj" path="res://World/Levels/door.gd" id="6_0jvbs"]
[ext_resource type="Texture2D" uid="uid://cqv8rusqkqddq" path="res://Assets/door.png" id="7_hcmub"]
[ext_resource type="FontFile" uid="uid://d2xk6epfeb0ag" path="res://Global/m3x6.ttf" id="8_yvein"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pw6m6"]
size = Vector2(12, 13)

[node name="room_2" type="Node2D"]

[node name="player" parent="." instance=ExtResource("3_m3c38")]
position = Vector2(192, -38.4792)

[node name="player_camera" type="Camera2D" parent="player"]
process_callback = 0
limit_left = 0
limit_right = 280
limit_bottom = 40
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_vertical_enabled = true

[node name="tile_map" parent="." instance=ExtResource("4_tfkc5")]
tile_map_data = PackedByteArray("AAAHAAAAAAABAAIAAAAGAAAAAAAAAAEAAAAFAAAAAAACAAEAAAAEAAAAAAABAAIAAAADAAAAAAACAAIAAAACAAAAAAABAAIAAAABAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAEAAAACAAIAAAABAAEAAAABAAIAAAACAAEAAAACAAIAAAADAAEAAAABAAIAAAAEAAEAAAACAAIAAAAFAAEAAAACAAIAAAAGAAEAAAACAAIAAAAHAAEAAAABAAIAAAAGAAIAAAACAAIAAAAFAAIAAAABAAIAAAAEAAIAAAABAAIAAAADAAIAAAACAAEAAAACAAIAAAACAAEAAAABAAIAAAABAAIAAAAAAAIAAAABAAIAAAABAAMAAAACAAIAAAAAAAMAAAABAAIAAAACAAMAAAAAAAEAAAADAAMAAAABAAIAAAAEAAMAAAACAAIAAAAFAAMAAAABAAIAAAAGAAMAAAACAAIAAAAHAAMAAAACAAIAAAAHAAIAAAACAAIAAAAIAAIAAAACAAIAAAAIAAEAAAACAAIAAAAIAAMAAAABAAIAAAAJAAIAAAABAAIAAAAJAAEAAAABAAIAAAAJAAMAAAABAAIAAAAKAAMAAAACAAIAAAAKAAIAAAABAAIAAAALAAMAAAABAAIAAAALAAIAAAACAAIAAAAMAAMAAAABAAIAAAAMAAIAAAABAAIAAAAAAAQAAAACAAIAAAAAAAUAAAACAAIAAAAAAAYAAAACAAIAAAABAAYAAAACAAIAAAABAAUAAAABAAIAAAABAAQAAAACAAIAAAACAAQAAAACAAIAAAACAAUAAAACAAIAAAACAAYAAAABAAIAAAADAAUAAAAAAAEAAAADAAQAAAACAAIAAAADAAYAAAABAAIAAAAEAAUAAAABAAIAAAAEAAQAAAACAAEAAAAEAAYAAAABAAIAAAAFAAQAAAACAAIAAAAFAAUAAAACAAEAAAAFAAYAAAACAAIAAAAGAAUAAAACAAIAAAAGAAYAAAABAAIAAAAHAAUAAAABAAIAAAAHAAQAAAACAAIAAAAGAAQAAAACAAIAAAAIAAUAAAABAAIAAAAIAAQAAAABAAIAAAAHAAYAAAACAAIAAAAIAAYAAAACAAIAAAAJAAUAAAACAAEAAAAJAAQAAAACAAIAAAAJAAYAAAABAAIAAAAKAAUAAAABAAIAAAAKAAQAAAABAAIAAAAKAAYAAAACAAIAAAALAAUAAAABAAIAAAALAAQAAAACAAIAAAALAAYAAAACAAIAAAAMAAQAAAABAAIAAAAMAAUAAAACAAIAAAAMAAYAAAABAAIAAAANAAQAAAABAAIAAAANAAMAAAABAAIAAAAOAAMAAAABAAIAAAAOAAQAAAABAAIAAAAOAAUAAAACAAIAAAANAAUAAAABAAIAAAANAAYAAAACAAIAAAAOAAYAAAABAAIAAAAPAAUAAAACAAIAAAAPAAQAAAACAAEAAAAPAAYAAAABAAIAAAALAP//AAACAAQAAAAMAP//AAACAAQAAAAOAP7/AAACAAQAAAAPAP7/AAACAAQAAAAJAAAAAAADAAQAAAAIAAAAAAABAAEAAAADAPz/AAACAAQAAAAEAPz/AAACAAQAAAAFAPz/AAACAAQAAAAKAPn/AAACAAQAAAAPAPf/AAACAAQAAAAOAPf/AAABAAEAAAAFAPv/AAABAAIAAAAEAPv/AAABAAIAAAADAPv/AAABAAIAAAADAPr/AAACAAIAAAAEAPr/AAAAAAEAAAACAPr/AAABAAIAAAABAPr/AAABAAIAAAABAPn/AAABAAIAAAAAAPn/AAACAAIAAAAAAPj/AAABAAIAAAATAPb/AAABAAIAAAATAPX/AAACAAIAAAASAPX/AAACAAIAAAARAPX/AAACAAIAAAAQAPX/AAABAAIAAAAAAPX/AAACAAIAAAAAAPb/AAABAAIAAAABAPX/AAACAAIAAAABAPb/AAACAAIAAAACAPX/AAACAAIAAAACAPb/AAABAAIAAAADAPX/AAACAAIAAAADAPb/AAACAAIAAAAEAPX/AAACAAIAAAAEAPb/AAACAAIAAAAFAPX/AAAAAAEAAAAFAPb/AAABAAIAAAAGAPX/AAABAAIAAAAGAPb/AAABAAIAAAAHAPX/AAACAAIAAAAHAPb/AAACAAIAAAAIAPX/AAACAAIAAAAIAPb/AAACAAIAAAAJAPX/AAACAAIAAAAJAPb/AAABAAIAAAAKAPX/AAACAAIAAAAKAPb/AAAAAAEAAAALAPX/AAABAAIAAAALAPb/AAAAAAEAAAAMAPX/AAACAAEAAAAMAPb/AAAAAAEAAAANAPX/AAABAAIAAAANAPb/AAABAAIAAAAOAPX/AAACAAIAAAAOAPb/AAACAAIAAAAPAPX/AAACAAIAAAAPAPb/AAACAAIAAAAQAPb/AAACAAIAAAARAPb/AAABAAIAAAASAPb/AAABAAIAAAAAAPf/AAACAAIAAAABAPf/AAABAAIAAAABAPj/AAACAAIAAAACAPf/AAACAAEAAAACAPj/AAABAAIAAAADAPf/AAAAAAEAAAADAPj/AAACAAEAAAAEAPf/AAABAAIAAAAEAPj/AAACAAEAAAAFAPf/AAABAAIAAAAFAPj/AAAAAAEAAAAGAPf/AAACAAIAAAAGAPj/AAABAAIAAAAHAPf/AAABAAIAAAAHAPj/AAABAAIAAAACAPn/AAABAAIAAAADAPn/AAACAAIAAAAEAPn/AAABAAIAAAAFAPn/AAABAAIAAAAGAPn/AAABAAIAAAAGAPr/AAABAAIAAAAFAPr/AAABAAIAAAAHAPn/AAACAAIAAAAHAPr/AAACAAEAAAAIAPn/AAABAAIAAAAJAPn/AAACAAIAAAAJAPj/AAAAAAEAAAAIAPj/AAABAAIAAAAIAPf/AAABAAIAAAAJAPf/AAAAAAEAAAAKAPj/AAACAAIAAAAKAPf/AAACAAIAAAALAPf/AAACAAIAAAALAPj/AAACAAIAAAAMAPf/AAABAAIAAAANAPf/AAABAAIAAAAUAPX/AAABAAIAAAAVAPX/AAABAAIAAAAWAPX/AAABAAIAAAAXAPX/AAABAAIAAAAYAPX/AAACAAIAAAAZAPX/AAABAAIAAAAaAPX/AAACAAIAAAAbAPX/AAACAAIAAAAbAPb/AAACAAIAAAAcAPX/AAABAAIAAAAdAPX/AAACAAIAAAAdAPb/AAABAAIAAAAcAPb/AAABAAIAAAAeAPb/AAACAAIAAAAeAPX/AAABAAIAAAAfAPX/AAAAAAEAAAAfAPb/AAACAAIAAAAfAPf/AAACAAIAAAAgAPf/AAACAAIAAAAgAPb/AAACAAEAAAAgAPX/AAAAAAEAAAAgAPj/AAACAAIAAAAhAPj/AAACAAIAAAAhAPf/AAABAAIAAAAhAPb/AAABAAIAAAAhAPX/AAACAAEAAAAiAPX/AAABAAIAAAAiAPb/AAABAAIAAAAiAPf/AAABAAIAAAAiAPj/AAACAAIAAAAiAPn/AAABAAIAAAAiAPr/AAACAAIAAAAiAPv/AAABAAIAAAAiAPz/AAACAAIAAAAiAP3/AAACAAIAAAAhAPr/AAABAAIAAAAhAPn/AAACAAIAAAAPAAMAAAACAAIAAAAQAAQAAAABAAIAAAAQAAUAAAACAAIAAAAQAAYAAAACAAIAAAARAAQAAAAAAAEAAAARAAUAAAABAAIAAAARAAYAAAACAAIAAAASAAQAAAABAAIAAAASAAUAAAAAAAEAAAASAAYAAAACAAIAAAAWAAQAAAABAAIAAAAWAAUAAAACAAIAAAAWAAYAAAABAAIAAAAXAAQAAAACAAIAAAAXAAUAAAAAAAEAAAAXAAYAAAACAAIAAAAYAAQAAAABAAIAAAAYAAUAAAAAAAEAAAAYAAYAAAACAAIAAAAZAAQAAAACAAIAAAAZAAUAAAAAAAEAAAAZAAYAAAACAAIAAAAaAAQAAAACAAIAAAAaAAUAAAACAAIAAAAaAAYAAAABAAIAAAAbAAQAAAACAAIAAAAbAAUAAAABAAIAAAAbAAYAAAACAAEAAAAcAAQAAAABAAIAAAAcAAUAAAACAAIAAAAcAAYAAAACAAIAAAAdAAQAAAACAAIAAAAdAAUAAAABAAIAAAAdAAYAAAABAAIAAAAeAAQAAAABAAIAAAAeAAUAAAACAAIAAAAeAAYAAAACAAIAAAAfAAQAAAABAAIAAAAfAAUAAAACAAIAAAAfAAYAAAABAAIAAAAgAAQAAAACAAEAAAAgAAUAAAAAAAEAAAAgAAYAAAACAAEAAAAhAAQAAAABAAIAAAAhAAUAAAABAAIAAAAhAAYAAAACAAIAAAAiAAQAAAABAAIAAAAiAAUAAAABAAIAAAAiAAYAAAACAAIAAAAdAAMAAAABAAIAAAAeAAMAAAACAAIAAAAfAAMAAAABAAIAAAAgAAMAAAACAAEAAAAhAAMAAAAAAAEAAAAiAAMAAAACAAIAAAAgAAIAAAABAAIAAAAhAAIAAAACAAIAAAAiAAIAAAACAAIAAAAcAAMAAAADAAQAAAANAAIAAAADAAQAAAAgAPn/AAACAAQAAAAhAPv/AAACAAQAAAAaAPb/AAACAAQAAAAWAPz/AAAAAAAAAAAZAPz/AAAAAAAAAAAXAPz/AAABAAAAAAAYAPz/AAABAAAAAAAVAPz/AAACAAQAAAAUAPz/AAACAAQAAAAaAPz/AAACAAQAAAAbAPz/AAACAAQAAAD//wAAAAAAAAEAAAD+/wAAAAAAAAEAAAD9/wAAAAAAAAEAAAD8/wAAAAAAAAEAAAD7/wAAAAAAAAEAAAAjAAIAAAAAAAEAAAAkAAIAAAAAAAEAAAAlAAIAAAAAAAEAAAAmAAIAAAAAAAEAAAAnAAIAAAAAAAEAAAASAAcAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAAVAAcAAAAAAAAAAAAWAAcAAAAAAAAAAAA=")

[node name="grass_map" parent="." instance=ExtResource("3_lvo1y")]
tile_map_data = PackedByteArray("AAAHAP//AAAEAAEAAAAGAP//AAAEAAEAAAAFAP//AAAEAAEAAAAEAP//AAAFAAEAAAADAP//AAAFAAEAAAACAP//AAAFAAEAAAABAP//AAAFAAEAAAAAAP//AAAEAAEAAAAKAAEAAAADAAEAAAALAAEAAAAFAAEAAAAMAAEAAAADAAEAAAAOAAIAAAAEAAEAAAAPAAIAAAADAAEAAAANAAIAAAAEAAEAAAAQAAMAAAADAAEAAAARAAMAAAADAAEAAAASAAMAAAADAAEAAAAIAAAAAAADAAEAAAAJAAAAAAAEAAEAAAAWAAMAAAADAAEAAAAXAAMAAAADAAEAAAAYAAMAAAAFAAEAAAAZAAMAAAAFAAEAAAAaAAMAAAADAAEAAAAbAAMAAAAEAAEAAAAcAAMAAAAFAAEAAAAdAAIAAAADAAEAAAAeAAIAAAAEAAEAAAAfAAIAAAAFAAEAAAAgAAEAAAAFAAEAAAAhAAEAAAAFAAEAAAAiAAEAAAAFAAEAAAAAAPr/AAAEAAAAAAABAPv/AAADAAAAAAACAPv/AAADAAAAAAADAPz/AAAFAAAAAAAEAPz/AAAEAAAAAAAGAPv/AAADAAAAAAAHAPv/AAAEAAAAAAAIAPr/AAAEAAAAAAAKAPn/AAAEAAAAAAAMAPj/AAADAAAAAAANAPj/AAAEAAAAAAAOAPf/AAADAAAAAAAPAPf/AAAEAAAAAAAQAPf/AAAEAAAAAAARAPf/AAAEAAAAAAASAPf/AAAFAAAAAAAUAPb/AAAEAAAAAAAVAPb/AAADAAAAAAAWAPb/AAADAAAAAAAXAPb/AAADAAAAAAAaAPb/AAAFAAAAAAAbAPf/AAADAAAAAAAcAPf/AAAEAAAAAAAdAPf/AAADAAAAAAAfAPj/AAAFAAAAAAAgAPn/AAAFAAAAAAAiAP7/AAAFAAAAAAAhAPv/AAAEAAAAAAAZAP3/AAADAAAAAAAYAP3/AAAEAAAAAAAWAP3/AAAEAAAAAAAXAP3/AAAFAAAAAAA=")

[node name="grass_map_h" parent="." instance=ExtResource("3_lvo1y")]
tile_map_data = PackedByteArray("AAAAAPr/AAAHAAEAAAAfAAIAAAAHAAIAAAAhAP3/AAAHAAIAAAAhAPv/AAAHAAIAAAAhAPz/AAAHAAEAAAAUAPb/AAAGAAAAAAAeAPf/AAAHAAAAAAAaAPb/AAAHAAEAAAAgAPn/AAAHAAIAAAAgAPr/AAAHAAAAAAAQAAMAAAAGAAEAAAANAAIAAAAGAAAAAAAKAAEAAAAGAAIAAAAGAPv/AAAGAAIAAAAIAPr/AAAGAAIAAAAMAPj/AAAGAAEAAAA=")

[node name="doors" type="Node" parent="."]

[node name="LevelTransition" parent="doors" instance=ExtResource("2_xkkfx")]
position = Vector2(0, -16)
next_level = "res://World/Levels/room_1.tscn"
spawn_pos = Vector2(651, -205)

[node name="LevelTransition2" parent="doors" instance=ExtResource("2_xkkfx")]
position = Vector2(168, 40)
next_level = "res://World/Levels/room_4.tscn"
spawn_pos = Vector2(4, 0)
flattened = true

[node name="LevelTransition3" parent="doors" instance=ExtResource("2_xkkfx")]
position = Vector2(280, 0)
next_level = "res://World/Levels/room_3.tscn"
spawn_pos = Vector2(5, -5)

[node name="spawn_setter" parent="." instance=ExtResource("5_y6vkb")]
position = Vector2(32, -16)

[node name="door" type="Area2D" parent="."]
position = Vector2(192.233, -39.871)
collision_layer = 0
collision_mask = 2
script = ExtResource("6_0jvbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(-0.23349, 1.37103)
shape = SubResource("RectangleShape2D_pw6m6")

[node name="Sprite2D" type="Sprite2D" parent="door"]
position = Vector2(-0.23349, -8.12897)
texture = ExtResource("7_hcmub")

[node name="Label" type="Label" parent="door"]
offset_left = -4.23349
offset_top = -15.129
offset_right = 35.7665
offset_bottom = 7.87103
theme_override_fonts/font = ExtResource("8_yvein")
theme_override_font_sizes/font_size = 11
text = "[w]"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="door" to="door" method="_on_body_entered"]
[connection signal="body_exited" from="door" to="door" method="_on_body_exited"]
